--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,18 @@
+server:
+  port: 1050
+
+spring:
+  application:
+    name: security-service
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:1010/eureka
+  instance:
+    hostname: localhost
+
 services:
   userUrl: http://user-service/user/
