--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<version>0.9.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
