--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.1</version></dependency>
+			<version>2.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.postitapplications</groupId>
